Syntax error fix

--- a/WeightedRegression.ipynb
+++ b/WeightedRegression.ipynb
@@ -38,7 +38,7 @@
     "    x0 = [1, x0]\n",
     "    X = [[1, i] for i in X]\n",
     "    X = np.asarray(X)\n",
-    "    xw = (X.T) * np.exp(np.sum((X - x0)  2, axis=1) / (-2 * tau))\n",
+    "    xw = (X.T) * np.exp(np.sum((X - x0) ** 2, axis=1) / (-2 * tau))\n",
     "    beta = np.linalg.pinv(xw @ X) @ xw @ Y @ x0\n",
     "    return beta\n",
     "\n",
