Syntax error fix

--- a/WeightedRegression.ipynb
+++ b/WeightedRegression.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "X = np.linspace(-3, 3, num=1000)\n",
     "domain = X\n",
-    "Y = np.log(np.abs(X  2 - 1) + .5)\n",
+    "Y = np.log(np.abs(X ** 2 - 1) + .5)\n",
     "\n",
     "draw(10)\n",
     "draw(0.001)"
